--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,5 +12,11 @@
     <string name="item_label">Item Type</string>
     <string name="count_label">boxes, lbs, etc</string>
     <string name="amount_label">Amount</string>
+    <string name="storage_nav_button">Recipes</string>
+    <string name="add_item_button">Add Item</string>
+    <string name="to_pantri_button">Pantri</string>
+    <string name="add_item_hint">Add new item to Storage</string>
+    <string name="add_count_hint">3</string>
+    <string name="add_type_hint">Lbs, bunches, etc</string>
 
 </resources>
